chore: очистка проекта и настройка базовых стилей
- удалены дефолтные лого и стили React/Vite
- добавлен reset стилей
- начата настройка глобальных стилей

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=Moderustic:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/global.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GrinyaVerse</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <h1 class = "container">Привет</h1>
   </body>
 </html>
