--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Moderustic:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/global.scss"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GrinyaVerse</title>
+       <script type="module" src="/src/main.tsx" defer></script>
   </head>
   <body>
-    <h1 class = "container">Привет</h1>
+   <div id="root"></div>
   </body>
 </html>
